[metadata]
name=cohort-pkg-admatuszak
version = 0.1
author = Andrew Matuszak
author_email = admatuszak@gmail.com
description = Uses cohort tables to forecast revenue allowing for a productivity ramp that varies over time as well as attrition.
long_description = file: README.md
long_desctiption_content_type = markdown
url = https://github.com/admatuszak/Cohort-Table
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6